--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -1,16 +1,16 @@
 {
     "ABOUT_US": "About Us",
-    "SCHEMES": "Schemes ",
+    "SCHEMES": "Schemes & Guidelines ",
     "KISAN_CORNER": "Kisan Corner",
     "GALLERY": "Gallery",
     "PHOTO_GALLERY":"Photo Gallery",
     "VIDEO_GALLERY":"Video Gallery",
-    "DOWNLOADS":"Downloads",
+    "DOWNLOADS":"Information",
     "FAQ":"FAQ",
-    "WHATS_NEW":"Whats New",
-    "CIRCULAR":"Circular",
-    "PRESS_RELEASE":"Press Release",
-    "ANNOUNCEMENT":"Announcement",
+    "WHATS_NEW":"Booking & Generate Token",
+    "CIRCULAR":"Machines/Drones/Solar Pump",
+    "PRESS_RELEASE":"Machinery/Farm Ponds",
+
     "CONTACT_US":"Contact Us",
     "DEPARTMENT_OF_AGRICULTURE":"Department of Agriculture",
     "GOVERNMENT_OF_UTTARPRADESH":"Government of Uttar Pradesh",
