--- a/src/assets/locale/hi.json
+++ b/src/assets/locale/hi.json
@@ -1,29 +1,29 @@
 {
-  "ABOUT_US": "हमारे बारे में",
+
   "SCHEMES": "योजनाए ",
-  "KISAN_CORNER": "किसान कॉर्नर",
-  "GALLERY": "गैलरी",
+
+
   "PHOTO_GALLERY":"फोटो गैलरी",
-  "VIDEO_GALLERY":"वीडियो गैलरी",
+
   "DOWNLOADS":"डाउनलोड",
-  "FAQ":"प्रायः पूछे जाने वाले प्रश्न",
-  "WHATS_NEW":"नया क्या है",
-  "CIRCULAR":"परिपत्र",
+
+
+
   "PRESS_RELEASE":"प्रेस विज्ञप्ति",
-  "ANNOUNCEMENT":"घोषणाएं",
-  "CONTACT_US":"संपर्क करें",
+
+
   "DEPARTMENT_OF_AGRICULTURE":"कृषि विभाग",
   "GOVERNMENT_OF_UTTARPRADESH":"उत्तर प्रदेश सरकार",
 
 
   "GOVERNMENT_OF_INDIA":"भारत सरकार",
-  "SCREEN_READER":"स्क्रीन रीडर",
+
   "SKIP_TO_CONTENT":"स्किप टू कंटेंट ",
   "A+":"A+",
   "A":"A",
   "A-":"A-",
   "DARK_LIGHT_MODE":"लाइट/डार्क मोड",
-  "HISTORY":"इतिहास",
+
 
 
   "DIGITAL":"डिजिटल",
@@ -32,17 +32,7 @@
   "HASSELFREE_ASSISTANCE":"परेशानी मुक्त सहायता और नई",
   "INITIATIVE":"पहल",
 
-  "KNOW_YOUR_LEADER":"अपने नेता को जानें",
-  "YOGI_ADITYANATH":"योगी आदित्यनाथ",
-  "CHIEF_MINISTER":"माननीय मुख्यमंत्री जी",
-  "SHRI_SURYA_PRATAP_SHAHI":"श्री सूर्य प्रताप शाही",
-  "AGRICULTURAL_MINISTER":"माननीय कृषि मंत्री",
-  "SHRI_BALDEV_SINGH_AULAKH":"श्री बलदेव सिंह ओळख",
-  "STATE_MINISTER_AGRICULTURE":"माननीय राज्य मंत्री कृषि",
-  "DR_DEVESH_CHATURVEDI":"डॉ. देवेश चतुर्वेदी",
-  "ADD_CHIEF_SEC_AGRI":"अपर मुख्य सचिव, कृषि",
-  "VIVEK_KUMAR_SINGH":"विवेक कुमार सिंह",
-  "DIR_AGRI":"कृषि निदेशक",
+
 
   "HISTORY_TITLE":"इतिहास",
   "HISTORY_PARA_1":"कृषि विभाग की स्थापना वर्ष 1875 में हुई थी। प्रारंभ में कृषि विभाग का कार्य कृषि आँकड़ों के संग्रह तथा आदर्श फार्मों की स्थापना तक ही सीमित था। वर्ष 1880 में कृषि विभाग को भूमि अभिलेख विभाग से जोड़ दिया गया। भारत सरकार अधिनियम-1919 के पारित होने के फलस्वरूप कृषि क्षेत्र राज्य सरकार के अधीन आ जाने के फलस्वरूप 01 दिसम्बर, 1919 से कृषि विभाग को एक स्वतंत्र विभाग बना दिया गया तथा 1 मई, 1920 को इसकी विधिवत स्थापना की गयी। विभाग की पूर्ववर्ती गतिविधियाँ, कृषि क्षेत्र जैसे फसल पालन, मृदा संरक्षण, गन्ना उत्पादन, उद्यान और उपनिवेशीकरण से संबंधित गतिविधियाँ शामिल थीं। स्वतंत्रता प्राप्ति के बाद गन्ना विभाग के गठन के परिणामस्वरूप गन्ना उत्पादन से संबंधित कार्य नवगठित विभाग में शामिल कर दिये गये। इसी क्रम में कृषि विपणन को भी कृषि विभाग से अलग कर दिया गया है।",
@@ -57,14 +47,140 @@
   "READ_MORE":"और पढ़ें",
 
 
-  "FARMER_REGISTRATION":"किसान पंजीकरण",
+
   "TOTAL_GRIEVANCE_RAISED":"उठाई गई कुल शिकायत",
   "RESOLVED_GRIEVANCE_NO":"समाधान की गई शिकायत संख्या",
   "VISITORS_COUNT":"आगंतुकों की गणना",
 
   "AWESOME_GALLERY":"बढ़िया गैलरी ",
 
+
+
+
+  "YOUR_VISITOR_NO":"आपका आगंतुक संख्या: ",
+  "REVIEWED_DATE":"अंतिम बार समीक्षा की गई और अद्यतन किया गया",
+  "FOLLOW_US":"हमसे जुड़ें :",
+
+
+  "STATE_AGRI_DIRECTORATE_UP":"राज्य कृषि निदेशालय उत्तर प्रदेश, भारत",
+  "ALL_RIGHTS_RESERVED":"सर्वाधिकार सुरक्षित",
+
+
+  "SKIP_TO_MAIN":"मुख्य पर जाएं",
+  "LIGHT_DARK_MODE":"लाइट/डार्क मोड ",
+  "CHECK_REGISTRATION":"अपना पंजीकरण जांचें",
+  "SCREEN_READER":"स्क्रीन रीडर",
+  "FONT_SIZE":"Font size (+, -)",
+  "LANGUAGE":"भाषा",
+  "ABOUT_US": "हमारे बारे में",
+  "HISTORY":"इतिहास",
+  "SCHEMES_GUIDELINES":"योजनाएं एवं दिशानिर्देश",
+  "BOOKING_GENERATE_TOKEN":"बुकिंग और टोकन जनरेट करें",
+  "MACHINES_DRONES_SOLARPUMP":"मशीनें/ड्रोन/सोलर पंप",
+  "MACHINERY_FARMPONDS":"मशीनरी/खेत तालाब",
+  "KISAN_CORNER": "किसान कॉर्नर",
+  "ARTICLES":"अनुच्छेद",
+  "BULLETINES":"सरकारी समाचार",
+  "PUBLICATION":"प्रकाशन",
+  "INFORMATION":"जानकारी",
+  "FAQ":"प्रायः पूछे जाने वाले प्रश्न",
+  "CONTACT_US":"संपर्क करें",
+  "FARMER_REGISTRATION":"किसान पंजीकरण",
+  "DEPARTMENT_LOGIN":"विभाग लॉगिन",
+  "IMP_ANNOUNCEMENTS":"महत्वपूर्ण उद्घोषणा ",
+  "ANNOUNCEMENT_1":"कृषि ड्रोन (कृषि ड्रोन) के निर्माताओं के पैनल में शामिल होने के लिए निमंत्रण",
+
+
+  "DASHBOARD":"डैशबोर्ड",
+
+
+  "UPLOAD_BANK_DRAFT":"लॉगइन से पीएम कुसुम योजना का बैंक ड्राफ्ट डीडी अपलोड करें",
+  "CRM_IMPLEMENTS":"सीआरएम पैनलीकरण लागू करता है",
+
+  "OFFLINE_LISENSE":"ऑफ़लाइन लाइसेंस",
+  "UPLABDHATA":"उपलब्धता",
+
+
+
+
+
+  "IMPORTANT_NOTICE":"महत्वपूर्ण सूचना:",
+  "FOR_FARMER_BROTHERS":"किसान भाइयों के लिए",
+
+  "VIEW_ALL":"सभी देखें",
+  "GALLERY": "गैलरी",
+  "VIDEO_GALLERY":"वीडियो",
+
+  "KNOW_YOUR_LEADER":"अपने नेता को जानें",
+  "YOGI_ADITYANATH":"योगी आदित्यनाथ",
+  "CHIEF_MINISTER":"माननीय मुख्यमंत्री जी",
+  "SHRI_SURYA_PRATAP_SHAHI":"श्री सूर्य प्रताप शाही",
+  "AGRICULTURAL_MINISTER":"माननीय कृषि मंत्री",
+  "SHRI_BALDEV_SINGH_AULAKH":"श्री बलदेव सिंह ओळख",
+  "STATE_MINISTER_AGRICULTURE":"माननीय राज्य मंत्री कृषि",
+  "DR_DEVESH_CHATURVEDI":"डॉ. देवेश चतुर्वेदी",
+  "ADD_CHIEF_SEC_AGRI":"अपर मुख्य सचिव, कृषि",
+  "VIVEK_KUMAR_SINGH":"विवेक कुमार सिंह",
+  "DIR_AGRI":"कृषि निदेशक",
+
+  "DBT":"प्रत्यक्ष लाभ अंतरण (डीबीटी)",
+  "PMKISAN":"पीएम किसान",
+
+  "WHATS_NEW":"नया क्या है",
+  "COMPLICATION_GOVERNMENT":"डीबीटी से संबंधित सरकारी आदेशों का संकलन",
+  "RABI_STRATERGY":"रबी उत्पादकता रणनीति (2022-23)",
+  "PERMISSIBLE_TO_FARMERS":"किसानों को अनुमन्य सुविधाएं",
+  "BENEFICERY_DDO_LOGIN":"ट्रेजरी के नए प्रारूप पर डीडीओ लॉगिन में लाभार्थी फ़ाइल जनरेट करने के लिए दोनों के विकल्प पर जाएं और जेनरेट लाभार्थी फ़ाइल नया प्रारूप (ग्रीन टैब) चुनें।",
+  "FOUR_DISTRICT_SHAMLI":"चार जिले शामली, श्रावस्ती, हापुड और संभल, जिनका कोषागार खाता इलाहाबाद बैंक में है, कोषागार के नए प्रारूप पर डीडीओ लॉगिन में लाभार्थी फ़ाइल जनरेट करने के लिए बोथ के विकल्प पर जाएं और जेनरेट लाभार्थी फ़ाइल नया प्रारूप (ब्लू टैब) चुनें।",
+  "SOLVING_PROBLEMS":"डीबीटी से संबंधित समस्याओं के समाधान के लिए डीबीटी पोर्टल पर 'कृषि विभाग के अधिकारियों के लिए' लिंक 'सुझाव एवं शिकायतें' पर उपलब्ध 'ऑनलाइन समस्या निवारण प्रणाली' पर अनुरोध पत्र भेजें। इसके लिए उप कृषि निदेशक, सी0यू0जी0 को लॉगइन आई0डी0 एवं पासवर्ड उपलब्ध करा दिया गया है। लॉगिन आईडी और पासवर्ड वही होगा.",
+
+  "CIRCULAR":"परिपत्र",
+  "PROGRESS_REPORT":"INSITU उपकरणों की नई प्रणाली में अपलोड करने की प्रगति रिपोर्ट",
+  "BILL_MONITORING_SYSYEM":"बिल निगरानी प्रणाली - कृषि निदेशालय",
+  "PROGRESS_DBT":"कृषि मशीनरी (सोलर पंप को छोड़कर) की डीबीटी की प्रगति",
+  "SOLAR_PUMP":"सोलर पंप लाभार्थी चयन सत्यापन प्रगति",
+  "PROGRESS_REPORT_INSTRUMENTS":"उपकरणों के भौतिक लक्ष्यों के चयन के विरुद्ध प्रगति रिपोर्ट",
+  "MILLIPN_FARMER_SCHOOL":"द मिलियन फार्मर्स स्कूल (किसान पाठशाला) भाग लेने वाले किसानों की सूची",
+  "SOIL_HEALTH_CARD_MS":"मृदा स्वास्थ्य कार्ड निगरानी प्रणाली",
+  "PROM_AGRI_MECH":"फसल अवशेषों के इन-सीटू प्रबंधन के लिए कृषि यंत्रीकरण को बढ़ावा देने की योजना, कृषि मशीनरी का विवरण",
+  "BENIFICERYWISE_REPORT":"लाभार्थीवार 35 कॉलम की रिपोर्ट",
+  "DETAILED_LIST":"डीबीटी के माध्यम से वितरित अनुदान के लाभार्थियों की विस्तृत सूची",
+  "LIST_OF_GROUP_REGISTRATION":"फार्म मशीनरी बैंक के लिए समूह पंजीकरण की सूची",
+  "REG_FOR_SCHEMES":"उद्यान एवं खाद्य प्रसंस्करण विभाग, उत्तर प्रदेश की योजनाओं हेतु पंजीकरण",
+  "APPLICATION_FOR_SOIL_TESTING":"ग्राम स्तर पर स्थानीय उद्यमियों द्वारा मृदा परीक्षण प्रयोगशाला की स्थापना हेतु आवेदन",
+  "DBT_LIST":"डीबीटी सूची",
+
+  "ANNOUNCEMENT":"घोषणाएं",
+  "INVITATION_EMPANELMENT":"कृषि ड्रोन (कृषि ड्रोन) के निर्माताओं के पैनल में शामिल होने के लिए निमंत्रण",
+  "LIST_BENEFICERIES":"लाभार्थियों की सूची",
+  "WHERE_WHO":"कहां, किसे फायदा हुआ",
+  "KWM":"किसान कल्याण मिशन",
+  "CHECK_PROCESS_REMITTANCE":"अनुदान खाते में प्रेषण की प्रगति की जाँच करें",
+  "DISTURBUTION_BENIFITS":"महत्वपूर्ण योजनाओं में लाभ वितरण",
+  "IFSC_CODE":"आईएफएससी कोड ढूंढें",
+  "MINI_KIT":"मिनी किट रिपोर्ट",
+  "BEEJGRAM_YOJANA":"बीजग्राम योजना बीज नेट रिपोर्ट",
+  "BENIFICERY_NATURAL_FARMING":"प्राकृतिक खेती हेतु लाभार्थी सूची",
+  "REVIEW_NATURAL_FARMING":"प्राकृतिक खेती के लिए समीक्षा रिपोर्ट",
+  "TRAINING_REPORT":"प्राकृतिक खेती के लिए प्रशिक्षण रिपोर्ट",
+  "FARMERS_FIELD_SCHOOL":"प्राकृतिक खेती के लिए किसान फील्ड स्कूल (एफएफएस) रिपोर्ट",
+
+  "ADVISORY":"सलाहकार",
+  "UPLOAD_DD":"लॉगइन से पीएम कुसुम योजना का बैंक ड्राफ्ट डीडी अपलोड करें",
+  "CRM_EMPANELMENT":"सीआरएम पैनलीकरण लागू करता है",
+  "ONLINE_LISENSE":"ऑनलाइन लाइसेंस",
+  "LISENSE_VERIFICATION":"ऑनलाइन लाइसेंस सत्यापन",
+  "AVAILABILITY_OF_SEEDS_CHEMICALS":"बीज एवं कृषि रक्षा रसायनों की उपलब्धता जानें",
+
   "USEFUL_LINKS":"उपयोगी कड़ियां",
+  "PARTICIPATORY_CROP_MONITORING":"सहभागी फसल निगरानी एवं निदान प्रणाली",
+  "SEED_MONITORING_SYSTEM":"ऑनलाइन बीज निगरानी प्रणाली",
+  "PM_KISSAN":"समस्या समाधान प्रणाली (पीएम किसान)",
+  "NATURAL_FARMING":"प्राकृतिक खेती",
+  "FPO_SHAKTI":"एफपीओ शक्ति",
+  "SOIL_HEALTH_CARD":"मृदा स्वास्थ्य कार्ड",
+  "SUGGESSION_COMPLAINTS":"सुझाव एवं शिकायतें",
+
   "NATURAL_FARMING_PROGRAMME":"प्राकृतिक खेती कार्यक्रम, उत्तर प्रदेश",
   "FPO_POWER":"एफपीओ पावर",
   "PROBLEM_SOLVING":"समस्या समाधान प्रणाली",
@@ -77,12 +193,9 @@
   "TERMS_CONDITIONS":"नियम और शर्तें",
   "DISCLAIMER":"डिस्क्लेमर",
   "PRIVACY_POLICY":"गोपनीयता नीति",
+  "website_policy":"वेबसाइट नीति",
+  "SITEMAP":"साइट मैप",
 
-  "YOUR_VISITOR_NO":"आपका आगंतुक संख्या: ",
-  "REVIEWED_DATE":"अंतिम बार समीक्षा की गई और अद्यतन किया गया",
-  "FOLLOW_US":"हमें फॉलो करे :",
-
-
-  "STATE_AGRI_DIRECTORATE_UP":"राज्य कृषि निदेशालय उत्तर प्रदेश, भारत",
-  "ALL_RIGHTS_RESERVED":"सर्वाधिकार सुरक्षित"
+  "SEED_DBT":"बीज डीबीटी रिपोर्ट",
+  "KRISHI_DBT":"कृषि यन्त्र दबत"
 }
