--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -15,71 +15,195 @@
     "DEPARTMENT_OF_AGRICULTURE":"Department of Agriculture",
     "GOVERNMENT_OF_UTTARPRADESH":"Government of Uttar Pradesh",
 
-    "GOVERNMENT_OF_INDIA":"Government of India",
-    "SCREEN_READER":"Screen Reader",
-    "SKIP_TO_CONTENT":"Skip to content",
-    "A+":"A+",
-    "A":"A",
-    "A-":"A-",
-    "DARK_LIGHT_MODE":"Light/Dark Mode",
-    "HISTORY":"History",
-
-    "DIGITAL":"Digital",
-    "AGRICULTURE":"Agriculture",
-    "REALTIME_SERVICE":"Realtime Services",
-    "HASSELFREE_ASSISTANCE":"Hasselfree Assistance and new",
-    "INITIATIVE":"Initiative",
-
-    "KNOW_YOUR_LEADER":"Know Your Leader",
-    "YOGI_ADITYANATH":"Yogi Adityanath",
-    "CHIEF_MINISTER":"Hon’ble Chief Minister",
-    "SHRI_SURYA_PRATAP_SHAHI":"Shri Surya Pratap Shahi",
-    "AGRICULTURAL_MINISTER":"Hon'ble Agriculture Minister",
-    "SHRI_BALDEV_SINGH_AULAKH":"Shri Baldev Singh Aulakh",
-    "STATE_MINISTER_AGRICULTURE":"Hon'ble State Minister Agriculture",
-    "DR_DEVESH_CHATURVEDI":"Dr. Devesh Chaturvedi",
-    "ADD_CHIEF_SEC_AGRI":"Additional Chief Secretary, Agriculture",
-    "VIVEK_KUMAR_SINGH":"Vivek Kumar Singh",
-    "DIR_AGRI":"Director of Agriculture",
+  "SCHEMES": "Schemes ",
 
 
-    "HISTORY_TITLE":"History",
-    "HISTORY_PARA_1":"The Agriculture Department was established in the year 1875. Initially, the work of the Agriculture Department was limited to the collection of agricultural statistics and establishment of ideal farms. In the year 1880, the Agriculture Department was attached to the Land Records Department. After the passage of the Government of India Act-1919, as a result of the agriculture sector coming under the state government, the Agriculture Department was made an independent department from December 01, 1919 and it was duly established on May 1, 1920. In the erstwhile activities of the department, agriculture sector such as crop rearing, soil conservation, sugarcane production, Activities related to gardens and colonization were included. After the attainment of independence, as a result of the formation of the sugarcane department, the work related to sugarcane production was included in the newly formed department. In this sequence, agricultural marketing has also been separated from the agriculture department.",
-    "HISTORY_PARA_2":"Department of Agriculture in its present form with the combined efforts of various institutions like UP Seed Development Corporation, State Seed Certification Institute, UP Agro, State Agricultural Management Institute Rahmankheda, Uttar Pradesh Agricultural Research Council etc. to speed up the activities related to agricultural production. Endeavoring.",
+  "PHOTO_GALLERY":"Photo Gallery",
+
+  "DOWNLOADS":"Downloads",
+
+  "PRESS_RELEASE":"Press Release",
+
+  "DEPARTMENT_OF_AGRICULTURE":"Department of Agriculture",
+  "GOVERNMENT_OF_UTTARPRADESH":"Government of Uttar Pradesh",
 
 
-    "ANNOUNCEMENT_2":"Announcement",
-    "ANNOUNCEMENT_PARA":"Regarding re-auction of Kharans in Kharif 2019 and Ravi 2019 seeds received from the areas of the district on 19.02.2021 at 1:00 pm at the Government Seed Processing Plant, Mau Rani...",
-    "DATE":"Date",
-    "NUMBERED_DATE":"03/10/2022",
-    "READ_MORE":"Read More",
+  "DIGITAL":"Digital",
+  "AGRICULTURE":"Agriculture",
+  "REALTIME_SERVICE":"Realtime Services",
+  "HASSELFREE_ASSISTANCE":"Hasselfree Assistance and new",
+  "INITIATIVE":"Initiative",
 
 
-    "FARMER_REGISTRATION":"Farmers Registration",
-    "TOTAL_GRIEVANCE_RAISED":"Total Grievance Raised",
-    "RESOLVED_GRIEVANCE_NO":"Resolved Grievance No.",
-    "VISITORS_COUNT":"Visitors Count",
 
-    "AWESOME_GALLERY":"Awesome Gallery",
 
-    "USEFUL_LINKS":"Useful Links",
-    "NATURAL_FARMING_PROGRAMME":"Natural Farming Programme, UP",
-    "FPO_POWER":"FPO Power",
-    "PROBLEM_SOLVING":"Problem Solving System",
-    "SEED_CIRTIFCATION_INSTITUTE":"Uttar Pradesh Seed Certification Institute",
-    "HELP":"Help",
-    "ACCESSIBILITY_STATEMENT":"Accessibility Statement",
-    "ARCHIVES":"Archives",
-    "HYPERLINK":"Hyper Linking Policy",
-    "COPYRIGHTS":"Copyright Policy",
-    "TERMS_CONDITIONS":"Terms and Conditions",
-    "DISCLAIMER":"Disclaimer",
-    "PRIVACY_POLICY":"Privacy Policy",
+  "HISTORY_TITLE":"History",
+  "HISTORY_PARA_1":"The Agriculture Department was established in the year 1875. Initially, the work of the Agriculture Department was limited to the collection of agricultural statistics and establishment of ideal farms. In the year 1880, the Agriculture Department was attached to the Land Records Department. After the passage of the Government of India Act-1919, as a result of the agriculture sector coming under the state government, the Agriculture Department was made an independent department from December 01, 1919 and it was duly established on May 1, 1920. In the erstwhile activities of the department, agriculture sector such as crop rearing, soil conservation, sugarcane production, Activities related to gardens and colonization were included. After the attainment of independence, as a result of the formation of the sugarcane department, the work related to sugarcane production was included in the newly formed department. In this sequence, agricultural marketing has also been separated from the agriculture department.",
+  "HISTORY_PARA_2":"Department of Agriculture in its present form with the combined efforts of various institutions like UP Seed Development Corporation, State Seed Certification Institute, UP Agro, State Agricultural Management Institute Rahmankheda, Uttar Pradesh Agricultural Research Council etc. to speed up the activities related to agricultural production. Endeavoring.",
 
-    "YOUR_VISITOR_NO":"You are Visitor No: ",
-    "REVIEWED_DATE":"Last reviewed and updated on",
-    "FOLLOW_US":"Follow us on:",
 
-    "STATE_AGRI_DIRECTORATE_UP":" State Agriculture Directorate Uttar Pradesh, India",
-    "ALL_RIGHTS_RESERVED":"All rights reserved"
-  }
+  "ANNOUNCEMENT_2":"Announcement",
+  "ANNOUNCEMENT_PARA":"Regarding re-auction of Kharans in Kharif 2019 and Ravi 2019 seeds received from the areas of the district on 19.02.2021 at 1:00 pm at the Government Seed Processing Plant, Mau Rani...",
+  "DATE":"Date",
+  "NUMBERED_DATE":"03/10/2022",
+  "READ_MORE":"Read More",
+
+
+
+  "TOTAL_GRIEVANCE_RAISED":"Total Grievance Raised",
+  "RESOLVED_GRIEVANCE_NO":"Resolved Grievance No.",
+  "VISITORS_COUNT":"Visitors Count",
+
+  "AWESOME_GALLERY":"Awesome Gallery",
+
+
+
+  "YOUR_VISITOR_NO":"You are Visitor No: ",
+  "REVIEWED_DATE":"Last reviewed and updated on",
+  "FOLLOW_US":"Join us on:",
+
+  "STATE_AGRI_DIRECTORATE_UP":" State Agriculture Directorate Uttar Pradesh, India",
+  "ALL_RIGHTS_RESERVED":"All rights reserved",
+
+
+  "GOVERNMENT_OF_INDIA":"Government of India",
+
+  "SKIP_TO_CONTENT":"Skip to content",
+  "A+":"A+",
+  "A":"A",
+  "A-":"A-",
+  "DARK_LIGHT_MODE":"Light/Dark Mode",
+
+
+  "SKIP_TO_MAIN":"Skip to main",
+  "LIGHT_DARK_MODE":"Light/Dark Mode",
+  "CHECK_REGISTRATION":"Check your Registration",
+  "SCREEN_READER":"Screen Reader",
+  "FONT_SIZE":"Font size (+, -)",
+  "LANGUAGE":"Language",
+  "ABOUT_US": "About Us",
+  "HISTORY":"History",
+  "SCHEMES_GUIDELINES":"Schemes & Guidelines",
+  "BOOKING_GENERATE_TOKEN":"Booking & Generate Token",
+  "MACHINES_DRONES_SOLARPUMP":"Machines/Drones/Solar Pump",
+  "MACHINERY_FARMPONDS":"Machinery/Farm Ponds",
+  "KISAN_CORNER": "Kisan Corner",
+  "ARTICLES":"Articles",
+  "BULLETINES":"Bulletin",
+  "PUBLICATION":"Publication",
+  "INFORMATION":"Information",
+  "FAQ":"FAQ",
+  "CONTACT_US":"Contact Us",
+  "FARMER_REGISTRATION":"Farmers Registration",
+  "DEPARTMENT_LOGIN":"Department Login",
+  "IMP_ANNOUNCEMENTS":"Important Annocument",
+  "ANNOUNCEMENT_1":"Invitation for Empanelment of Manufactures of Agricultural Drones (Krishi Drones)",
+
+
+  "DASHBOARD":"Dashboard",
+
+
+  "UPLOAD_BANK_DRAFT":"Upload Bank Draft DD of PM Kusum Yojana from Login",
+  "CRM_IMPLEMENTS":"CRM Implements Empanelment",
+
+  "OFFLINE_LISENSE":"Offline License",
+  "UPLABDHATA":"UPLABDHATA",
+
+
+  "IMPORTANT_NOTICE":"Important Notice:",
+  "FOR_FARMER_BROTHERS":"For Farmer Brothers",
+
+  "VIEW_ALL":"view all",
+  "GALLERY": "Gallery",
+  "VIDEO_GALLERY":"Video",
+
+  "KNOW_YOUR_LEADER":"Know Your Leader",
+  "YOGI_ADITYANATH":"Yogi Adityanath",
+  "CHIEF_MINISTER":"Hon’ble Chief Minister",
+  "SHRI_SURYA_PRATAP_SHAHI":"Shri Surya Pratap Shahi",
+  "AGRICULTURAL_MINISTER":"Hon'ble Agriculture Minister",
+  "SHRI_BALDEV_SINGH_AULAKH":"Shri Baldev Singh Aulakh",
+  "STATE_MINISTER_AGRICULTURE":"Hon'ble State Minister Agriculture",
+  "DR_DEVESH_CHATURVEDI":"Dr. Devesh Chaturvedi",
+  "ADD_CHIEF_SEC_AGRI":"Additional Chief Secretary, Agriculture",
+  "VIVEK_KUMAR_SINGH":"Vivek Kumar Singh",
+  "DIR_AGRI":"Director of Agriculture",
+
+  "DBT":"DIRECT BENIFIT TRANSFER (DBT)",
+  "PMKISAN":"PM-KISAN",
+
+  "WHATS_NEW":"What's New",
+  "COMPLICATION_GOVERNMENT":"Compilation of Government Orders related to DBT",
+  "RABI_STRATERGY":"Rabi Productivity Strategy (2022-23)",
+  "PERMISSIBLE_TO_FARMERS":"Permissible facilities to farmers",
+  "BENEFICERY_DDO_LOGIN":"To generate beneficiary file in DDO login on the new format of Treasury, go to the option of Both and select Generate Beneficiary File new format (Green Tab).",
+  "FOUR_DISTRICT_SHAMLI":"Four districts Shamli, Shravasti, Hapur and Sambhal, whose treasury account is in Allahabad Bank, to generate beneficiary file in DDO login on the new format of treasury, go to the option of Both and select Generate Beneficiary File new format (Blue Tab).",
+  "SOLVING_PROBLEMS":"For solving problems related to DBT, send a request letter to the 'Online Problem Redressal System' available on the 'Suggestions and Complaints' link ''For the officers of the Agriculture Department'' on the DBT portal. For this, the login ID and password was made available to the Deputy Director of Agriculture, C.U.G. The login ID and password will be the same.",
+
+
+  "CIRCULAR":"Circulars",
+  "PROGRESS_REPORT":"Progress report of uploading in the new system of INSITU instruments",
+  "BILL_MONITORING_SYSYEM":"Bill Monitoring System - Directorate of Agriculture",
+  "PROGRESS_DBT":"Progress of DBT of Agricultural Machinery (Except Solar Pump)",
+  "SOLAR_PUMP":"Solar Pump Beneficiary Selection Verification Progress",
+  "PROGRESS_REPORT_INSTRUMENTS":"Progress report against the selection of physical targets of the instruments",
+  "MILLIPN_FARMER_SCHOOL":"The Million Farmers School (Kisan Pathshala) Participating Farmers List",
+  "SOIL_HEALTH_CARD_MS":"Soil Health Card Monitoring System",
+  "PROM_AGRI_MECH":"Promotion of Agriculture Mechanization for In-Situ Management of Crop Residue Scheme, details of agricultural machinery",
+  "BENIFICERYWISE_REPORT":"Beneficiary wise report of 35 columns",
+  "DETAILED_LIST":"Detailed list of beneficiaries of grant distributed through DBT",
+  "LIST_OF_GROUP_REGISTRATION":"List of Group Registration for Farm Machinery Bank",
+  "REG_FOR_SCHEMES":"Registration for schemes of Department of Horticulture and Food Processing, Uttar Pradesh",
+  "APPLICATION_FOR_SOIL_TESTING":"Application for establishment of soil testing laboratory by local entrepreneurs at village level",
+  "DBT_LIST":"DBT List",
+
+  "ANNOUNCEMENT":"Annocements",
+  "INVITATION_EMPANELMENT":"Invitation for Empanelment of Manufactures of Agricultural Drones (Krishi Drones)",
+  "LIST_BENEFICERIES":"List of Beneficiaries",
+  "WHERE_WHO":"Where, Who Benefited",
+  "KWM":"Kisan Welfare Mission",
+  "CHECK_PROCESS_REMITTANCE":"Check the progress of remittance to grant Account",
+  "DISTURBUTION_BENIFITS":"Distribution of Benefits in important schemes",
+  "IFSC_CODE":"find ifsc code",
+  "MINI_KIT":"mini kit report",
+  "BEEJGRAM_YOJANA":"Beejgram Yojana Seed Net Report",
+  "BENIFICERY_NATURAL_FARMING":"Beneficiary List for Natural Farming",
+  "REVIEW_NATURAL_FARMING":"Review Report for Natural Farming",
+  "TRAINING_REPORT":"Training Report for Natural Farming",
+  "FARMERS_FIELD_SCHOOL":"Farmers Field School (FFS) Report for Natural Farming",
+
+  "ADVISORY":"Advisory",
+  "UPLOAD_DD":"Upload Bank Draft DD of PM Kusum Yojana from Login",
+  "CRM_EMPANELMENT":"CRM Implements Empanelment",
+  "ONLINE_LISENSE":"Online License",
+  "LISENSE_VERIFICATION":"Online License Verfication",
+  "AVAILABILITY_OF_SEEDS_CHEMICALS":"Know the availability of Seeds and agricultural defense chemicals",
+
+  "USEFUL_LINKS":"Useful Link",
+  "PARTICIPATORY_CROP_MONITORING":"Participatory Crop Monitoring and Diagnostic System",
+  "SEED_MONITORING_SYSTEM":"Online Seed Monitoring System",
+  "PM_KISSAN":"Problem Solving System (PM_KISSAN)",
+  "NATURAL_FARMING":"Natural Farming",
+  "FPO_SHAKTI":"FPO Shakti",
+  "SOIL_HEALTH_CARD":"Soil Health Card",
+  "SUGGESSION_COMPLAINTS":"Suggestions & Complaints",
+
+  "NATURAL_FARMING_PROGRAMME":"Natural Farming Programme, UP",
+  "FPO_POWER":"FPO Power",
+  "PROBLEM_SOLVING":"Problem Solving System",
+  "SEED_CIRTIFCATION_INSTITUTE":"Uttar Pradesh Seed Certification Institute",
+  "HELP":"Help",
+  "ACCESSIBILITY_STATEMENT":"Accessibility Statement",
+  "ARCHIVES":"Archives",
+  "HYPERLINK":"Hyper Linking Policy",
+  "COPYRIGHTS":"Copyright Policy",
+  "TERMS_CONDITIONS":"Terms and Conditions",
+  "DISCLAIMER":"Disclaimer",
+  "PRIVACY_POLICY":"Privacy Policy",
+  "website_policy":"Website Policy",
+  "SITEMAP":"Sitemap",
+
+  "SEED_DBT":"Seed DBT Report",
+  "KRISHI_DBT":"Krishi Yantra DBT"
+
+}
