--- a/src/assets/locale/hi.json
+++ b/src/assets/locale/hi.json
@@ -68,7 +68,7 @@
 
   "SKIP_TO_MAIN":"मुख्य पर जाएं",
   "LIGHT_DARK_MODE":"लाइट/डार्क मोड ",
-  "CHECK_REGISTRATION":"अपना पंजीकरण जांचें",
+  "CHECK_REGISTRATION":"अपना पंजीकरण नंबर जांचें",
   "SCREEN_READER":"स्क्रीन रीडर",
   "FONT_SIZE":"Font size (+, -)",
   "LANGUAGE":"भाषा",
@@ -79,11 +79,11 @@
   "MACHINES_DRONES_SOLARPUMP":"मशीनें/ड्रोन/सोलर पंप",
   "MACHINERY_FARMPONDS":"मशीनरी/खेत तालाब",
   "KISAN_CORNER": "किसान कॉर्नर",
-  "ARTICLES":"अनुच्छेद",
-  "BULLETINES":"सरकारी समाचार",
+  "ARTICLES":"आलेख",
+  "BULLETINES":"बुलेटिन",
   "PUBLICATION":"प्रकाशन",
   "INFORMATION":"जानकारी",
-  "FAQ":"प्रायः पूछे जाने वाले प्रश्न",
+  "FAQ":"सामान्य प्रश्न",
   "CONTACT_US":"संपर्क करें",
   "FARMER_REGISTRATION":"किसान पंजीकरण",
   "DEPARTMENT_LOGIN":"विभाग लॉगिन",
@@ -138,11 +138,11 @@
   "PROGRESS_REPORT":"INSITU उपकरणों की नई प्रणाली में अपलोड करने की प्रगति रिपोर्ट",
   "BILL_MONITORING_SYSYEM":"बिल निगरानी प्रणाली - कृषि निदेशालय",
   "PROGRESS_DBT":"कृषि मशीनरी (सोलर पंप को छोड़कर) की डीबीटी की प्रगति",
-  "SOLAR_PUMP":"सोलर पंप लाभार्थी चयन सत्यापन प्रगति",
+
   "PROGRESS_REPORT_INSTRUMENTS":"उपकरणों के भौतिक लक्ष्यों के चयन के विरुद्ध प्रगति रिपोर्ट",
   "MILLIPN_FARMER_SCHOOL":"द मिलियन फार्मर्स स्कूल (किसान पाठशाला) भाग लेने वाले किसानों की सूची",
   "SOIL_HEALTH_CARD_MS":"मृदा स्वास्थ्य कार्ड निगरानी प्रणाली",
-  "PROM_AGRI_MECH":"फसल अवशेषों के इन-सीटू प्रबंधन के लिए कृषि यंत्रीकरण को बढ़ावा देने की योजना, कृषि मशीनरी का विवरण",
+  "PROM_AGRI_MECH":"INSITU फसल अवशेष प्रबंधन के लिए कृषि यंत्रीकरण को बढ़ावा देने की योजना, कृषि मशीनरी का विवरण",
   "BENIFICERYWISE_REPORT":"लाभार्थीवार 35 कॉलम की रिपोर्ट",
   "DETAILED_LIST":"डीबीटी के माध्यम से वितरित अनुदान के लाभार्थियों की विस्तृत सूची",
   "LIST_OF_GROUP_REGISTRATION":"फार्म मशीनरी बैंक के लिए समूह पंजीकरण की सूची",
@@ -172,10 +172,10 @@
   "LISENSE_VERIFICATION":"ऑनलाइन लाइसेंस सत्यापन",
   "AVAILABILITY_OF_SEEDS_CHEMICALS":"बीज एवं कृषि रक्षा रसायनों की उपलब्धता जानें",
 
-  "USEFUL_LINKS":"उपयोगी कड़ियां",
+  "USEFUL_LINKS":"उपयोगी लिंक",
   "PARTICIPATORY_CROP_MONITORING":"सहभागी फसल निगरानी एवं निदान प्रणाली",
   "SEED_MONITORING_SYSTEM":"ऑनलाइन बीज निगरानी प्रणाली",
-  "PM_KISSAN":"समस्या समाधान प्रणाली (पीएम किसान)",
+  "PM_KISSAN":"समस्या समाधान प्रणाली (PM_KISSAN)",
   "NATURAL_FARMING":"प्राकृतिक खेती",
   "FPO_SHAKTI":"एफपीओ शक्ति",
   "SOIL_HEALTH_CARD":"मृदा स्वास्थ्य कार्ड",
@@ -197,5 +197,35 @@
   "SITEMAP":"साइट मैप",
 
   "SEED_DBT":"बीज डीबीटी रिपोर्ट",
-  "KRISHI_DBT":"कृषि यन्त्र दबत"
+  "KRISHI_DBT":"कृषि यन्त्र दबत",
+
+  "FOOTER_PARA1":"इस वेबसाइट पर सामग्री राज्य कृषि निदेशालय उत्तर प्रदेश कृषि भवन लखनऊ द्वारा प्रकाशित और प्रबंधित की जाती है।",
+  "FOOTER_PARA2":"इस वेबसाइट के बारे में किसी भी प्रश्न के लिए कृपया 'वेब सूचना प्रबंधक' से संपर्क करें।",
+  "SOLAR_PUMP":"सोलर पंप लाभार्थी चयन सत्यापन प्रगति",
+
+
+  "option1":"वर्षा जल संचयन हेतु खेत तालाब योजना",
+  "option2":"परम्परागत कृषि विकास योजना (PKVY)",
+  "option3":"स्वच्छता एक्शन प्लान नमामि गंगे क्लीन अभियान",
+  "option4":"मृदा स्वास्थ्य और उर्वरता पर राष्ट्रीय परियोजना",
+  "option5":"रेनफेड एरिया डेवलपमेंट (RAD) प्रोग्राम",
+  "option6":"पं० दीनदयाल उपाध्याय किसान समृदि योजना",
+  "option7":"मृदा सर्वेक्षण तथा परीक्षण कार्यक्रम",
+  "option8":"जैव उर्वरक उत्पादन प्रयोगशालाओं के सुदृढ़ीकरण / जैव उर्वरक के प्रयोग को प्रोत्साहित करने का कार्यक्रम",
+  "option9":"मृदा स्वास्थ्य का सुदृढ़ीकरण योजना",
+  "option10":"मृदा में सूक्ष्म तत्वों की कमी को दूर करने एवं भूमि सुधार हेतु जिप्सम वितरण की योजना",
+  "option11":"जनपद हमीरपुर में जैविक खेती के विकास की योजना",
+  "option12":"बुन्देलखण्ड में गौ आधारित प्राकृतिक खेती की योजना",
+  "option13":"राष्ट्रीय कृषि विकास योजनान्तर्गत कृषि विभाग द्वारा संचालित उपज पालन की योजनाएं",
+  "option14":"कृषि उत्पादन में वृद्धि के लिये कृषि प्रसार, कृषि निवेश तथा तकनीकी प्रबंधन",
+  "option15":"नेशनल फ़ूड सिक्यूरिटी मिशन-चावल धटक",
+  "option16":"नेशनल मिशन आन एडिबिल ऑयल",
+  "option17":"प्रधानमंत्री किसान ऊर्जा सुरक्षा एंव उत्थान महाभियान (पी.एम. कुसुम) सोलर पम्प योजना",
+  "option18":"विभिन्न परिसिथतिकी संसाधनों द्वारा कीटरोग नियंत्रण",
+  "option19":"संकर बीजो के उपयोग को बढ़ावा देने की योजना",
+  "option20":"प्रमाणित बीजों पर अनुदान",
+  "option21":"प्रमोशन ऑफ एग्रीकल्चर मैकेनाइजेशन फार इन - सीटू मैनेजमेंट ऑफ क्राप रेजिड्यू",
+  "option22":"नेशनल मिशन आन एग्रीकल्चर एक्सटेंशन एण्ड टेक्नालाजी",
+  "option23":"प्रशिक्षित कृषि उद्यमी स्वाबलंबन योजना",
+  "option24":"वर्मी कम्पोस्ट यूनिट स्थापना की योजना"
 }
