--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -80,7 +80,9 @@
   "FAQ":"FAQ",
   "CONTACT_US":"Contact Us",
   "FARMER_REGISTRATION":"Farmers Registration",
-  "DEPARTMENT_LOGIN":"Department Login",
+  "LOGIN":"Login",
+  "DEPARTMENT":"Department",
+  "CUG":"CUG",
   "IMP_ANNOUNCEMENTS":"Important Annocument",
   "ANNOUNCEMENT_1":"Invitation for Empanelment of Manufactures of Agricultural Drones (Krishi Drones)",
 
