--- a/src/assets/locale/hi.json
+++ b/src/assets/locale/hi.json
@@ -86,7 +86,9 @@
   "FAQ":"सामान्य प्रश्न",
   "CONTACT_US":"संपर्क करें",
   "FARMER_REGISTRATION":"किसान पंजीकरण",
-  "DEPARTMENT_LOGIN":"विभाग लॉगिन",
+  "LOGIN":"लॉगिन",
+  "DEPARTMENT":"विभाग",
+  "CUG":"सीयूजी",
   "IMP_ANNOUNCEMENTS":"महत्वपूर्ण उद्घोषणा ",
   "ANNOUNCEMENT_1":"कृषि ड्रोन (कृषि ड्रोन) के निर्माताओं के पैनल में शामिल होने के लिए निमंत्रण",
 
