--- a/src/assets/locale/hi.json
+++ b/src/assets/locale/hi.json
@@ -229,5 +229,8 @@
   "option21":"प्रमोशन ऑफ एग्रीकल्चर मैकेनाइजेशन फार इन - सीटू मैनेजमेंट ऑफ क्राप रेजिड्यू",
   "option22":"नेशनल मिशन आन एग्रीकल्चर एक्सटेंशन एण्ड टेक्नालाजी",
   "option23":"प्रशिक्षित कृषि उद्यमी स्वाबलंबन योजना",
-  "option24":"वर्मी कम्पोस्ट यूनिट स्थापना की योजना"
+  "option24":"वर्मी कम्पोस्ट यूनिट स्थापना की योजना",
+
+  "OTP":"ओटीपी",
+  "Password":"पासवर्ड"
 }
